# intan-okfrontpanel

./: LICENSE  README.md  meson.build
debian/: changelog  control  rules
libraries/: meson.build
udev/: 70-opalkelly.rules  meson.build
